# tapLock

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: auth.R  auth0.R  config.R  entra_id.R  extendr-wrappers.R  futures.R  google.R  is_error.R  keycloak.R  shiny.R  utils.R
articles/: en_securing_shiny_google.html  en_securing_shiny_google.md  es_asegura_shiny_con_google.html  es_asegura_shiny_con_google.md  index.html  index.md
example/: app.R
man/: access_token.Rd  add_auth_layers.Rd  add_trailing_slash.Rd  build_cookie.Rd  build_redirect_uri.Rd  decode_token.Rd  expires_at.Rd  expires_in.Rd  get_access_token.Rd  get_bearer.Rd  get_client_id.Rd  get_login_url.Rd  get_logout_url.Rd  get_token_field.Rd  is_expired.Rd  is_valid.Rd  new_auth0_config.Rd  new_entra_id_config.Rd  new_google_config.Rd  new_keycloak_config.Rd  new_openid_config.Rd  parse_cookies.Rd  print.access_token.Rd  refresh_jwks.Rd  remove_bearer.Rd  request_token.Rd  sso_shiny_app.Rd  tapLock-package.Rd  token.Rd  use_futures.Rd
news/: index.html  index.md
reference/: access_token.html  add_auth_layers.html  add_auth_layers.md  add_trailing_slash.html  build_cookie.html  build_cookie.md  build_redirect_uri.html  decode_token.html  (+44 more)
src/rust/: Cargo.toml
src/rust/src/: cookies.rs  entra_id.rs  error.rs  google.rs  jwks.rs  keycloak.rs  lib.rs
(+15 files in other folders)
