[package]
name = 'tapLock'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'tapLock'

[dependencies]
async-trait = "0.1.87"
extendr-api = { version = '0.7.1', features = ["serde", "result_condition"] }
jsonwebtoken = "9.3.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
urlencoding = "2.1.3"
